[project]
name = "vast"
version = "0.0.1a"
authors = [
    {name = "Johan PONIN", email = "johan.ponin.pro@gmail.com"},
]
description = "Python to elisp (Emacs Lisp) transpiler."
readme = "README.org"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "click ~=8.1.3",
]

[project.optional-dependencies]
dev = [
    "pylint ~=2.17.0",
    "toml ~=0.10.2",
    "black ~=23.1.0",
]
test = [
    "pytest ~=7.2.2",
    "pytest-cov ~=3.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"
pythonpath = [
  "src"
]

[tool.coverage.run]
source = ["src"]

[tool.pylint]
max-line-length = 80
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]
